--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 /build
+.gradle/
+.idea/GuaGuaKa.iml
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/workspace.xml
+gradle/
+gradlew
+gradlew.bat
+local.properties
